2021-07-04  Guillermo E. Martinez  <guillermo.e.martinez@oracle.com>

	* doc/poke.texi (Decode-Compute-Encode): Fix `double_number`
	function: s/int/unsigned char/ for bytes.

2021-06-06  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_type_function): Add comment.
	(pkl_gen_pr_type_array): Save computed closure for printer in
	AST node.
	(pkl_gen_pr_type_struct): Likewise.
	* libpoke/pkl-gen.pks (print_boffset): Use escape sequence in string
	literal to make RAS happy.
	(struct_printer): s/struct_type/@struct_type/.

2021-06-05  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Update for 1.3.
	* NEWS: Likewise.
	* doc/gendocs_template: Likewise.

2021-05-31  Luca Saiu  <positron@gnu.org>

	* cfg.mk (gl_public_submodule_commit): Define as empty.  Update
	comment.

2021-05-26  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (wrapped-functions): Add std string functions.

2021-05-23  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): s/uint<64>/ulong<64>.
	* libpoke/pvm-val.c (pvm_make_int): Add assertion for `size` argument.
	(pvm_make_uint): Likewise.
	(pvm_make_long): Likewise.
	(pvm_make_ulong): Likewise.

2021-05-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-rt.pk (_pkl_escape_string): New function.
	* libpoke/pkl-gen.pks (string_printer): Use `_pkl_escape_string` to
	print valid string literals (replace non-printable characters with
	escape sequence).
	* testsuite/poke.pkl/printf-value-18.pk: New test.
	* testsuite/poke.pkl/printf-value-19.pk: Likewise.
	* testsuite/poke.pkl/printf-value-20.pk: Likewise.
	* testsuite/poke.pkl/printf-value-21.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-05-22  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pvm.jitter (strset): New instruction.
	(wrapped-functions): Add `memcpy`.
	* libpoke/pkl-insn.def (STRSET): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_ps_comp_stmt): Emit code.